--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "description": "[![Actions Status](https://github.com/Marina093/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Marina093/frontend-project-44/actions)",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "main": "index.js",
   "scripts": {
@@ -21,6 +22,12 @@
   },
   "homepage": "https://github.com/Marina093/frontend-project-44#readme",
   "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
