--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
     "brain-calc": "bin/brain-calc.js",
-    "brain-gcd": "bin/brain-gcd.js"
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progress": "bin/brain-progression.js"
   },
   "main": "index.js",
   "scripts": {
